# birdnet-dash

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
etc/cron.d/: birdsnet-dash
etc/dnsmasq/: birds.conf
etc/nginx/: birds.mithis.com.conf
src/birdsnet_dash/: cli.py  config.py  generate.py  healthcheck.py  scrape.py
static/: manifest.json
templates/: index.html.j2
